--- a/src/EmbyStreams.page
+++ b/src/EmbyStreams.page
@@ -6,49 +6,41 @@ Cond="parse_ini_file('/boot/config/plugins/embystreams/embystreams.cfg')['DISPLA
 <?php
     $plugin = "embystreams";
     $cfg = parse_ini_file("/boot/config/plugins/embystreams/embystreams.cfg");
-    // Default to 5 seconds if not set
     $poll_interval = isset($cfg['POLL_INTERVAL']) ? (int)$cfg['POLL_INTERVAL'] * 1000 : 5000;
+    
+    // Construct Emby WebUI URL
+    $host = $cfg['HOST'] ?? '';
+    $port = $cfg['PORT'] ?? '8096';
+    // Basic check to assume http/https (Emby defaults to http on 8096, https on 8920)
+    $protocol = ($port == '8920') ? 'https' : 'http';
+    $emby_url = "$protocol://$host:$port/web/index.html";
 ?>
 
 <style>
-    /* Custom CSS to match PlexStreams styling */
-    .emby-icon-img {
-        width: 48px; 
-        height: 48px; 
-        vertical-align: top; 
-        margin-right: 10px;
-    }
-    .es-row { 
-        display: flex; 
-        align-items: center; 
-        border-bottom: 1px solid rgba(255,255,255,0.05); 
-        padding: 4px 0; 
-    }
+    .emby-icon-img { width: 40px; height: 40px; vertical-align: top; margin-right: 10px; }
+    .es-row { display: flex; align-items: center; border-bottom: 1px solid rgba(255,255,255,0.05); padding: 4px 0; }
     .es-row:last-child { border-bottom: none; }
+    /* Transcode Icon Style */
+    .es-transcode { font-size: 10px; opacity: 0.7; margin-left: 5px; }
 </style>
 
 <?php
-// We use the $mytiles variable. This is the "Magic" that makes Unraid treat it like a native widget.
 $mytiles[$plugin]['column1'] =
 <<<EOT
 <tbody class="sortable" title="_(Emby Streams)_">
     <tr>
         <td>
             <img src="/plugins/embystreams/emby.png" class="emby-icon-img icon">
-            
             <div class="section" style="line-height:2rem;">
                 _(Emby Streams)_<br>
-                <span id="es_count_container">
-                    <span id="embystreams_count">0</span> _(Active Stream(s))_
-                </span>
+                <span id="es_count_container"><span id="embystreams_count">0</span> _(Active Stream(s))_</span>
             </div>
             
-            <a href="/Settings/EmbyStreamsSettings" title="_(Emby Streams Settings)_">
-                <i class="fa fa-fw fa-cog control"></i>
-            </a>
+            <a href="/Settings/EmbyStreamsSettings" title="_(Settings)_"><i class="fa fa-fw fa-cog control"></i></a>
+            
+            <a href="{$emby_url}" target="_blank" title="_(Open Emby WebUI)_"><i class="fa fa-fw fa-external-link control"></i></a>
         </td>
     </tr>
-    
     <tr>
         <td>            
             <span class="w36">_(Name)_</span>
@@ -57,14 +49,11 @@ $mytiles[$plugin]['column1'] =
             <span class="w18" align="right">_(State)_</span>
         </td>
     </tr>
-    
     <tr>
         <td>
             <div id="embystreams_streams">
                 <div id="es_retrieving">
-                    <p align="center" style="font-style:italic;text-align:center;padding-top:10px;">
-                        _(Retrieving Stream Data...)_
-                    </p>
+                    <p align="center" style="font-style:italic;text-align:center;padding-top:10px;">_(Retrieving Data...)_</p>
                 </div>
             </div>
         </td>
@@ -75,21 +64,16 @@ EOT;
 
 <script>
     var embyPollInterval = <?=$poll_interval;?>;
-
     function updateEmbyDashboard() {
         $.get("/plugins/embystreams/embystreams_api.php", function(data) {
             if (data) {
-                // Update Content
                 $("#embystreams_streams").html(data);
-                
-                // Update Count (naive count based on rows)
                 var count = $("#embystreams_streams .es-row").length;
                 if(data.includes("No active streams")) count = 0;
                 $("#embystreams_count").text(count);
             }
         });
     }
-
     $(function() {
         updateEmbyDashboard();
         setInterval(updateEmbyDashboard, embyPollInterval);
