--- a/src/EmbyStreams.page
+++ b/src/EmbyStreams.page
@@ -16,54 +16,99 @@ Cond="parse_ini_file('/boot/config/plugins/embystreams/embystreams.cfg')['DISPLA
 ?>
 
 <style>
-    .emby-icon-img { width: 35px; height: 35px; vertical-align: top; margin-right: 10px; }
+    /* Icon styling adjusted for tile-header */
+    .emby-icon-img { width: 32px; height: 32px; } 
+
+    /* Row styling */
     .es-row { display: flex; align-items: center; border-bottom: 1px solid rgba(255,255,255,0.05); padding: 4px 0; }
     .es-row:last-child { border-bottom: none; }
     .es-transcode { font-size: 10px; opacity: 0.7; margin-left: 5px; }
+
+    /* Mobile Responsiveness */
+    @media only screen and (max-width: 500px) {
+        /* Hide Device (col 2) and User (col 3) on mobile */
+        .es-mobile-hide, 
+        .es-row > span:nth-of-type(2), 
+        .es-row > span:nth-of-type(3) { 
+            display: none !important; 
+        }
+        
+        /* Make Name column wider on mobile */
+        .w36, .es-row > span:nth-of-type(1) { 
+            width: 65% !important; 
+        }
+        
+        /* Make State column wider on mobile */
+        .w18:last-child, .es-row > span:nth-of-type(4) { 
+            width: 30% !important; 
+            text-align: right;
+        }
+    }
 </style>
 
 <?php
-$mytiles[$plugin]['column1'] =
-<<<EOT
+$mytiles[$plugin]['column1'] = <<<EOT
 <tbody class="sortable" title="_(Emby Streams)_">
-    <tr>
-        <td>
-            <img src="/plugins/embystreams/emby.png" class="emby-icon-img icon">
-            
-            <div class="section" style="line-height:2rem;">
-                _(Emby Streams)_<br>
-                <span id="es_count_container"><span id="embystreams_count">0</span> _(Active Stream(s))_</span>
+  <tr>
+    <td>
+      <div class='tile-header' id='{$plugin}-dashboard-card'>
+        <div class='tile-header-left'>
+          <img src="/plugins/embystreams/emby.png" class="emby-icon-img icon">
+          <div class='section'>
+            <h3 class='tile-header-main' id='{$plugin}-dashboard-title'>
+              _(Emby Streams)_
+            </h3>
+            <span id="es_count_container"><span id="embystreams_count">0</span> _(Active Stream(s))_</span>
+          </div>
+        </div>
+        <div class='tile-header-right'>
+          <div class='tile-header-right-controls'>
+            <a href="{$emby_url}" target="_blank" title="_(Open Emby WebUI)_">
+              <i class="fa fa-fw fa-external-link control"></i>
+            </a>
+            <a id="{$plugin}-settings-button" href="/Settings/EmbyStreamsSettings" title="_(Settings)_">
+              <i class="fa fa-fw fa-cog control"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </td>
+  </tr>
+  <tr>
+    <td>            
+        <span class="w36">_(Name)_</span>
+        <span class="w18 es-mobile-hide" align="center">_(Device)_</span>
+        <span class="w18 es-mobile-hide">_(User)_</span>
+        <span class="w18" align="right">_(State)_</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+        <div id="embystreams_streams">
+            <div id="es_retrieving">
+                <p align="center" style="font-style:italic;text-align:center;padding-top:10px;">_(Retrieving Data...)_</p>
             </div>
-            
-            <span style="float:right; margin-top: 12px;">
-                <a href="{$emby_url}" target="_blank" title="_(Open Emby WebUI)_" style="margin-right: 8px;">
-                    <i class="fa fa-fw fa-external-link control"></i>
-                </a>
-                <a href="/Settings/EmbyStreamsSettings" title="_(Settings)_">
-                    <i class="fa fa-fw fa-cog control"></i>
-                </a>
-            </span>
-        </td>
-    </tr>
-    <tr>
-        <td>            
-            <span class="w36">_(Name)_</span>
-            <span class="w18" align="center">_(Device)_</span>
-            <span class="w18">_(User)_</span>
-            <span class="w18" align="right">_(State)_</span>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <div id="embystreams_streams">
-                <div id="es_retrieving">
-                    <p align="center" style="font-style:italic;text-align:center;padding-top:10px;">_(Retrieving Data...)_</p>
-                </div>
-            </div>
-        </td>
-    </tr>
+        </div>
+    </td>
+  </tr>
 </tbody>
 EOT;
+
+// COMPATIBILITY BLOCK FOR UNRAID 7.2+
+// This ensures the header renders correctly on newer versions
+$isResponsiveWebgui = version_compare(parse_ini_file('/etc/unraid-version')['version'] ?? "", '7.2', '>=');
+if ( ! $isResponsiveWebgui) {
+    $mytiles[$plugin]["column1"] .= <<<EOT
+        <script>
+            $(function() {
+                $('#{$plugin}-dashboard-title').replaceWith(function() {
+                    return $(this).text() + "<br>";
+                });
+                $('#{$plugin}-settings-button').prependTo('#{$plugin}-dashboard-card');
+            });
+        </script>
+    EOT;
+}
 ?>
 
 <script>
@@ -76,7 +121,6 @@ EOT;
                 $("#embystreams_streams").html(data);
                 
                 // 2. Calculate the count
-                // We count how many elements have the class '.es-row'
                 var count = $("#embystreams_streams .es-row").length;
                 
                 // Double check: if the HTML contains the "No active streams" text, force count to 0
@@ -91,9 +135,7 @@ EOT;
     }
 
     $(function() {
-        // Run immediately
         updateEmbyDashboard();
-        // Start Polling
         setInterval(updateEmbyDashboard, embyPollInterval);
     });
 </script>
